[package]
name = "railcar"
version = "1.0.4"
authors = ["Vishvananda Ishaya Abrams <vish.ishaya@oracle.com>"]
build = "build.rs"

[dependencies]
caps = "0.3"
clap = "2"
error-chain = "0.12"
lazy_static = "1"
libc = "0.2"
log = {version = "0.4", features = ["release_max_level_info"] }
nix = "0.15"
num-traits = "0.2"
oci = { path = "oci" }
prctl = "1"
scopeguard = "1"
seccomp-sys = "0.1.2"

[features]
nightly = []

[profile.release]
lto = true
panic = 'abort'
