[package]
name = "railcar"
version = "1.0.4"
authors = ["Vishvananda Ishaya Abrams <vish.ishaya@oracle.com>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
fs-err = "2.5"

[dependencies]
caps = "0.5"
clap = "2"
color-eyre = "0.5"
fs-err = "2.5"
thiserror = "1"
libc = "0.2"
log = { version = "0.4", features = ["release_max_level_info"] }
nix = "0.20"
num-traits = "0.2"
oci = { path = "oci" }
prctl = "1"
scopeguard = "1"
seccomp-sys = "0.1.3"
lazy_static = "1.4"

[features]
nightly = []

[[bin]]
name = "railcar"

[profile.release]
lto = true
panic = 'abort'

[profile.dev.package.backtrace]
opt-level = 3
